samples/_failures_safe/1761690725_0a3dfb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_197dca46.c: In function ‘main’:
./samples/SAFE/__tmp_197dca46.c:161:5: error: expected declaration or statement at end of input
  161 |     printf("\nTokens:\n");
      |     ^~~~~~
